--- a/src/DotnetLambda/DotnetLambda.csproj
+++ b/src/DotnetLambda/DotnetLambda.csproj
@@ -9,5 +9,6 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.0.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.1.0" />
+    <PackageReference Include="EPPlus" Version="4.5.3.3" />
   </ItemGroup>
 </Project>
